<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:text="@string/play"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        app:fontFamily="@font/playfair_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.example.pickionarygame.play
        android:id="@+id/playView"
        android:layout_width="410dp"
        android:layout_height="560dp"
        android:layout_marginLeft="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/linear_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageButton
            android:id="@+id/btn_pencilMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/pencil"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/lineag"/>

        <ImageButton
            android:id="@+id/btn_pencilLess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/pencil"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/linead"/>

        <ImageButton
            android:id="@+id/btn_eraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/eraser"
            android:contentDescription="@string/borar"/>

        <ImageButton
            android:id="@+id/btn_colorpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/art"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/color"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>